--- a/style.scss
+++ b/style.scss
@@ -17,9 +17,10 @@
   --color-post-bg: #221822;
   --color-fg: #eee;
   --color-faint: #b7aab9;
-  --color-quote: #e1c5e0;
+  --color-quote: #f7c6f5;
   --color-accent: #964fb3;
   --color-accent2: #4e285e;
+  --color-accent3: #3f1d4e;
   --color-link: #caf0f9;
   --color-link-underline: #6cf7d4;
   --color-link-underline-visited: #54a3ca;
@@ -116,12 +117,17 @@ a {
 ul, ol { padding-inline-start: 1.5em; }
 
 blockquote {
-  padding-left: 1em;
+  padding: 0.5em 1em;
+  padding-right: 0;
   border-left: 4px solid var(--color-accent);
   font-weight: normal;
+  background: linear-gradient(to right, var(--color-accent3), transparent 50%);
   color: var(--color-quote);
 
-  p { margin: 0; }
+  p {
+    margin: 0;
+    + p { margin-top: 0.5rem; }
+  }
   + * { margin-top: 1em; }
 }
 
@@ -131,7 +137,7 @@ table {
 
   th, td {
     padding: 0.25em 0.5em;
-    border: 1px solid;
+    border: 1px solid var(--color-faint);
   }
 }
 
@@ -286,9 +292,9 @@ ul.gallery {
 }
 
 blockquote.centerpiece {
-  padding: 0 1em;
-  border-left: 2px solid var(--color-accent);
-  border-right: 2px solid var(--color-accent);
+  border-left: 4px solid var(--color-accent);
+  border-right: 4px solid var(--color-accent);
+  background: linear-gradient(to right, transparent, var(--color-accent3) 50%, transparent);
   text-align: center;
 }
 
