--- a/style.scss
+++ b/style.scss
@@ -295,8 +295,7 @@ img.banner {
 }
 
 blockquote.centerpiece {
-  border-left: 4px solid var(--color-accent);
-  border-right: 4px solid var(--color-accent);
+  border: none;
   background: linear-gradient(to right, transparent, var(--color-accent3) 50%, transparent);
   text-align: center;
 }
