--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,16 +1,15 @@
 @use './theme/iosevka';
 @use './theme/sky';
 @use './theme/fx';
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Grandstander:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://cdn.jsdelivr.net/gh/dracula/pygments/dracula.css');
 
 // VARS
 :root {
   --width: 850px;
   --main-padding: 2em;
-  --font-header: Chewy, Lato, Raleway, sans-serif;
-  --font-text: Quicksand, Nunito, Avenir Next, Avenir, Arial, system-ui, sans-serif;
+  --font-header: Grandstander, Lato, Raleway, sans-serif;
+  --font-text: Gabarito, Nunito, Avenir Next, Avenir, Arial, system-ui, sans-serif;
   --font-mono: Iosevka Curly, Iosevka, Consolas, monospace;
   --color-body-bg-top: #18082c;
   --color-body-bg-bottom: #0d4344;
@@ -42,10 +41,27 @@ body {
   background-attachment: fixed;
   color: var(--color-fg);
   font-family: var(--font-text);
-  font-weight: 500;
   font-size: 18px;
-  line-height: 1.5;
+  font-optical-sizing: auto;
+  line-height: 1.3;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-header);
+  font-weight: 500;
+  font-style: oblique 2deg;
+  letter-spacing: -1px;
+
+  @supports (font-variation-settings: "wght" 550) { font-variation-settings: "wght" 550; }
+}
+
+h1 { font-size: 2.5em; }
+h2 { font-size: 1.7em; }
+h3 { font-size: 1.4em; }
+h4 { font-size: 1.2em; }
+h5 { font-size: 1.1em; }
+
+strong { font-weight: 800; }
 
 header {
   display: flex;
@@ -60,8 +76,12 @@ header {
       margin: 0;
       color: var(--color-fg);
       font-size: 4em;
+      font-weight: 800;
       text-align: center;
       text-shadow: 2px 2px 6px var(--color-accent), -2px -2px 8px var(--color-accent2);
+      letter-spacing: -2px;
+
+      @supports (font-variation-settings: "wght" 800) { font-variation-settings: "wght" 800; }
     }
   }
 }
@@ -93,13 +113,6 @@ footer {
 
   > span:not(#footer-directive) { display: none; }
 }
-
-h1, h2, h3, h4, h5, h6 { font-family: var(--font-header); font-weight: normal; }
-h1 { font-size: 2.5em; }
-h2 { font-size: 1.7em; }
-h3 { font-size: 1.4em; }
-h4 { font-size: 1.2em; }
-h5 { font-size: 1.1em; }
 
 time {
   font-family: var(--font-mono);
