--- a/src/theme/_fonts.scss
+++ b/src/theme/_fonts.scss
@@ -1,3 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Grandstander:ital,wght@0,100..900;1,100..900&display=swap');
+
+@font-face {
+	font-family: 'Maple Mono';
+	src: url('https://bear-images.sfo2.cdn.digitaloceanspaces.com/noat/maplemono-regular.woff2') format('woff2');
+	font-display: swap;
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Maple Mono';
+	src: url('https://bear-images.sfo2.cdn.digitaloceanspaces.com/noat/maplemono-italic.woff2') format('woff2');
+	font-display: swap;
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Maple Mono';
+	src: url('https://bear-images.sfo2.cdn.digitaloceanspaces.com/noat/maplemono-bold.woff2') format('woff2');
+	font-display: swap;
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Maple Mono';
+	src: url('https://bear-images.sfo2.cdn.digitaloceanspaces.com/noat/maplemono-bolditalic.woff2') format('woff2');
+	font-display: swap;
+	font-weight: bold;
+	font-style: italic;
+}
+
 @font-face {
 	font-family: 'Iosevka Curly';
 	font-display: swap;
