--- a/src/theme.scss
+++ b/src/theme.scss
@@ -50,6 +50,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
   font-style: oblique 2deg;
   letter-spacing: -1px;
+  line-height: normal;
 
   @supports (font-variation-settings: "wght" 550) { font-variation-settings: "wght" 550; }
 }
