--- a/src/theme.scss
+++ b/src/theme.scss
@@ -76,7 +76,8 @@ nav {
     margin: 0;
     display: flex;
     justify-content: center;
-    gap: 1em;
+    flex-wrap: wrap;
+    gap: 0.5em 1em;
 
     a:visited { color: var(--color-link); }
   }
