Readjust element spacing

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -7,7 +7,7 @@
 :root {
   --width: 850px;
   --main-padding: 2em;
-  --element-spacing: 0.8rem;
+  --element-spacing: 0.8em;
   --font-header: Grandstander, Lato, Raleway, sans-serif;
   --font-text: Gabarito, Nunito, Avenir Next, Avenir, Arial, system-ui, sans-serif;
   --font-mono: 'Maple Mono', Iosevka, Consolas, monospace;
